--- a/S01 - Bootcamp and Binary Classification/SLU14 - Model complexity and Overfitting/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU14 - Model complexity and Overfitting/Exercise notebook.ipynb
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2017,13 +2017,13 @@
     "    # mutual_info = ...\n",
     "    # YOUR CODE HERE\n",
     "    # raise NotImplementedError()\n",
-    "    mutual_info = ...\n",
+    "    mutual_info = pd.Series(mutual_info_regression(X, y, random_state=42), index=X.columns)\n",
     "    \n",
     "    # Extract the feature names where the mutual information is zero\n",
     "    # features = ...\n",
     "    # YOUR CODE HERE\n",
     "    # raise NotImplementedError()\n",
-    "    features = ...\n",
+    "    features = mutual_info[mutual_info==0.0].index.to_list()\n",
     "    return features \n",
     "\n",
     "\n"
@@ -2031,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2092,7 +2092,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features: 165\n",
+      "Mean Squared Error (train): 631.52\n",
+      "R-squared (train): 0.88\n",
+      "Mean Squared Error (test): 1642.79\n",
+      "R-squared (test): 0.71\n"
+     ]
+    }
+   ],
    "source": [
     "df = load_dataset()\n",
     "df_removed = df.drop(nonsense_features, axis=1)\n",
