--- a/S01 - Bootcamp and Binary Classification/SLU15 - Hyperparameter Tuning/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU15 - Hyperparameter Tuning/Exercise notebook.ipynb
@@ -938,7 +938,7 @@
     "\n",
     "random_grid = {\n",
     "    \"C\": uniform(0.1, 10),\n",
-    "    \"penalty\": [\"l1\", \"l2\", \"elasticnet\"], \n",
+    "    \"penalty\": [\"l2\", \"l1\", \"elasticnet\"], \n",
     "    }\n",
     "\n",
     "# YOUR CODE HERE\n",
@@ -1119,26 +1119,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=0.30584494295802445)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rs_best_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1154,19 +1134,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Your parameters are not correct",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1512/3178871211.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mrs_best_model_hash\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m'c2fbca42369c6609159487a711fb011cf55e626ed986aef10f6a0326c31b23ca'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrs_best_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLogisticRegression\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m'Make sure you are using the right model'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mrs_best_model_hash\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0msha256\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrs_best_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Your parameters are not correct'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: Your parameters are not correct"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rs_best_model_hash ='c2fbca42369c6609159487a711fb011cf55e626ed986aef10f6a0326c31b23ca'\n",
     "assert isinstance(rs_best_model, sklearn.linear_model.LogisticRegression) , 'Make sure you are using the right model'\n",
@@ -1194,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1219,13 +1187,13 @@
     "# best_rs_params = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "best_rs_params = rs_best_model.get_params()\n",
+    "best_rs_params = random_search.best_params_\n",
     "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1241,19 +1209,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Your parameters are not correct",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1512/3190422346.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mbest_rs_params_hash\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'f0844d10d0d606c4bedd3ec11eb58f7303fb633665df9b3855a45d84c7caa04b'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mbest_rs_params_hash\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0msha256\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbest_rs_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Your parameters are not correct'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: Your parameters are not correct"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_rs_params_hash = 'f0844d10d0d606c4bedd3ec11eb58f7303fb633665df9b3855a45d84c7caa04b'\n",
     "assert best_rs_params_hash == sha256(json.dumps(best_rs_params).encode()).hexdigest(), 'Your parameters are not correct' "
@@ -1261,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1274,7 +1230,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The AUROC score of the best random search Logistic regression classifier is  0.7888888888888889\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The AUROC score of the best random search Logistic regression classifier is \",roc_auc_score(random_search.predict(X_test), y_test))"
    ]
