--- a/S01 - Bootcamp and Binary Classification/SLU16 - Workflow/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU16 - Workflow/Exercise notebook.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "09ef698a",
    "metadata": {
     "deletable": false,
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2ae1b06d",
    "metadata": {
     "deletable": false,
@@ -197,7 +197,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Workflow steps:\n",
+      "1 :  Data analysis and preparation\n",
+      "2 :  Evaluate results\n",
+      "3 :  Watch Netflix\n",
+      "4 :  Iterate\n",
+      "5 :  Increase complexity\n",
+      "6 :  Train model\n",
+      "7 :  Google Hackathon solutions\n",
+      "8 :  Spam\n",
+      "9 :  Establish a Baseline\n",
+      "10 :  Get the data\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Workflow steps:\")\n",
     "for i in range(len(workflow_steps)):\n",
@@ -206,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d50e8f62",
    "metadata": {
     "deletable": false,
@@ -225,12 +243,13 @@
     "# workflow_steps_answer = [...]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "workflow_steps_answer = [workflow_steps[9], workflow_steps[0], workflow_steps[5], workflow_steps[1], workflow_steps[3]]\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ce2728e0",
    "metadata": {
     "deletable": false,
@@ -293,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "397e0bfa",
    "metadata": {
     "deletable": false,
@@ -307,7 +326,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Analysis and Preparation steps:\n",
+      "1 :  Spanish Inquisition\n",
+      "2 :  Feature engineering\n",
+      "3 :  Dealing with data problems\n",
+      "4 :  Feature selection\n",
+      "5 :  Data analysis\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Data Analysis and Preparation steps:\")\n",
     "for i in range(len(data_analysis_steps)):\n",
@@ -316,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "b4116241",
    "metadata": {
     "deletable": false,
@@ -335,12 +367,13 @@
     "# data_analysis_steps_answer = [...]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "data_analysis_steps_answer = [ \"Data analysis\", \"Dealing with data problems\", \"Feature engineering\", \"Feature selection\"]\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "09b060a6",
    "metadata": {
     "deletable": false,
@@ -1845,7 +1878,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 ('slu05')",
    "language": "python",
    "name": "python3"
   },
@@ -1859,7 +1892,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9e08dc7a8551636f76550f4024519e9a26220ac4e0efb1a78a372cf047746b8c"
+   }
   }
  },
  "nbformat": 4,
