--- a/S01 - Bootcamp and Binary Classification/SLU19 - k-Nearest Neighbors (kNN)/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU19 - k-Nearest Neighbors (kNN)/Exercise notebook.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -139,7 +139,7 @@
    },
    "outputs": [],
    "source": [
-    "def euclidean_norm(x):\n",
+    "def euclidean_norm(x: np.array) -> float:\n",
     "    \"\"\"\n",
     "    Return the euclidean norm of a vector\n",
     "        \n",
@@ -153,13 +153,14 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    norm = np.sqrt(np.sum(x**2))\n",
+    "    # raise NotImplementedError()\n",
     "    return norm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -241,8 +242,16 @@
    "outputs": [],
    "source": [
     "# implement a function called euclidean_distance\n",
+    "def euclidean_distance (a:np.array, b:np.array):\n",
+    "    return np.sqrt(np.sum((a-b)**2))\n",
     "\n",
-    "def distance_function(a, b, distance_type=\"euclidean\"):\n",
+    "def dot_distance (a:np.array, b:np.array):\n",
+    "    return np.dot(a,b)\n",
+    "\n",
+    "def cos_distance (a:np.array, b:np.array):\n",
+    "    return 1-(np.dot(a,b)/(np.sqrt(np.sum((a)**2))*np.sqrt(np.sum((b)**2))))\n",
+    "\n",
+    "def distance_function(a:np.array, b:np.array, distance_type:str=\"euclidean\"):\n",
     "    \"\"\"\n",
     "    Return the distance between two vectors, computed using one of \n",
     "        `euclidean`, `dot_product` or `cosine`. \n",
@@ -265,7 +274,7 @@
     "    \n",
     "    # 1. Check shape consistency\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "\n",
     "    # 2. Compute distance\n",
     "    # Hint:\n",
@@ -280,14 +289,24 @@
     "    #      ...\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    if a.shape != b.shape:\n",
+    "        return None\n",
+    "\n",
+    "    dist_calc_method = {\n",
+    "        \"euclidean\": euclidean_distance(a, b),\n",
+    "        \"dot\": dot_distance(a, b),\n",
+    "        \"cosine\": cos_distance(a, b)\n",
+    "    }\n",
+    "    \n",
+    "    distance = dist_calc_method.get(distance_type, None)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -300,7 +319,16 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_16150/1373677742.py:9: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  return 1-(np.dot(a,b)/(np.sqrt(np.sum((a)**2))*np.sqrt(np.sum((b)**2))))\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Euclidean Distance\n",
     "\n",
@@ -1372,7 +1400,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('slu05')",
    "language": "python",
    "name": "python3"
   },
@@ -1386,7 +1414,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9e08dc7a8551636f76550f4024519e9a26220ac4e0efb1a78a372cf047746b8c"
+   }
   }
  },
  "nbformat": 4,
