--- a/S01 - Bootcamp and Binary Classification/SLU19 - k-Nearest Neighbors (kNN)/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU19 - k-Nearest Neighbors (kNN)/Exercise notebook.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -495,18 +495,20 @@
     "\n",
     "    # 1. Compute the distance from x to all points in dataset\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    distances = np.apply_along_axis(lambda dataset_row: distance_function(x, dataset_row, distance_type), 1, dataset)\n",
+    "    # raise NotImplementedError()\n",
     "      \n",
     "    # 2. Get the indices of the closest data points\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    indexes = np.argsort(distances)[:k]\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return indexes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -700,7 +702,7 @@
    },
    "outputs": [],
    "source": [
-    "def knn_classifier(x, dataset, targets, k, distance_function):\n",
+    "def knn_classifier(x:np.array, dataset:np.array, targets:np.array, k:int, distance_function:str):\n",
     "    \"\"\"\n",
     "    Predicts the label for a single point, given a dataset, a value for k and a distance function\n",
     "    \n",
@@ -718,7 +720,8 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return label\n"
    ]
