--- a/S01 - Bootcamp and Binary Classification/SLU19 - k-Nearest Neighbors (kNN)/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU19 - k-Nearest Neighbors (kNN)/Exercise notebook.ipynb
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -615,18 +615,22 @@
     "\n",
     "    # 1. Get the labels from the observed neighbors\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
+    "    y_labels = np.apply_along_axis(lambda k_value: y[k_value], 0, neighbor_indexes)\n",
+    "    # raise NotImplementedError()\n",
+    "    y_labels = y_labels.astype(int)\n",
     "    # 2. Get the most common label\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    knn_label = np.round(np.median(y_labels))\n",
+    "\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
-    "    return knn_label\n"
+    "    return int(knn_label)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -688,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -702,7 +706,7 @@
    },
    "outputs": [],
    "source": [
-    "def knn_classifier(x:np.array, dataset:np.array, targets:np.array, k:int, distance_function:str):\n",
+    "def knn_classifier(x:np.array, dataset:np.array, targets:np.array, k:int, distance_function:str) -> int:\n",
     "    \"\"\"\n",
     "    Predicts the label for a single point, given a dataset, a value for k and a distance function\n",
     "    \n",
@@ -720,6 +724,8 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
+    "    indexes = find_nearest_neighbours(x, dataset, distance_function, k)\n",
+    "    label = get_knn_class(targets, indexes)\n",
     "\n",
     "    # raise NotImplementedError()\n",
     "    \n",
@@ -728,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -810,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -842,18 +848,20 @@
     "\n",
     "    # 1. Get the labels from the observed neighbors\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    y_labels = np.apply_along_axis(lambda k_value: y[k_value], 0, neighbor_indexes)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # 2. Get the average label value\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    knn_label = np.mean(y_labels)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return knn_label\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -915,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -948,14 +956,16 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    indexes = find_nearest_neighbours(x, dataset, distance_function, k)\n",
+    "    label = get_knn_value(targets, indexes)\n",
+    "    # raise NotImplementedError()\n",
     "\n",
     "    return label\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1051,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1078,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1099,12 +1109,13 @@
     "# X_train, X_test, y_train, y_test = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "X_train, X_test, y_train, y_test = train_test_split(data.get(\"data\"), data.get(\"target\"), test_size=0.25, random_state=42)\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1151,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1169,23 +1180,24 @@
     "# which is in fact a generalisation of the euclidean distance\n",
     "# clf = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
-    "\n",
+    "# raise NotImplementedError()\n",
+    "clf = KNeighborsClassifier(3, metric=\"minkowski\" ,n_jobs=-1).fit(X_train, y_train)\n",
     "\n",
     "# Get predictions for the test dataset\n",
     "# y_pred = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
-    "\n",
+    "# raise NotImplementedError()\n",
+    "y_pred = clf.predict(X_test)\n",
     "# Measure the accuracy of your solution using scikit's accuracy_score function\n",
     "# accuracy = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "accuracy = accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1234,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1250,23 +1262,27 @@
     "# Instantiate a kNN Classifier with k=3, that uses the cosine distance as distance function\n",
     "# clf = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
+    "clf = KNeighborsClassifier(3, metric=cosine ,n_jobs=-1).fit(X_train, y_train)\n",
     "\n",
     "\n",
     "# Get predictions for the test dataset\n",
     "# y_pred = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
     "\n",
     "# Measure the accuracy of your solution using scikit's accuracy_score function\n",
     "# accuracy = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "accuracy = accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1323,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1335,17 +1351,76 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(estimator=KNeighborsClassifier(),\n",
+       "             param_grid=[{'metric': ['minkowski'], 'n_neighbors': [7, 11]},\n",
+       "                         {'metric': [<function cosine at 0x7f30663db790>],\n",
+       "                          'n_neighbors': [9, 11]}],\n",
+       "             scoring='accuracy')"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "grid = [\n",
+    "        {\n",
+    "        \"n_neighbors\": [7,11],\n",
+    "        \"metric\": [\"minkowski\"]\n",
+    "        },\n",
+    "        {\n",
+    "        \"n_neighbors\": [9,11],\n",
+    "        \"metric\": [cosine]\n",
+    "        }\n",
+    "]\n",
     "# Find the best combination of n_neighbors and metric\n",
+    "grid_cv = GridSearchCV(KNeighborsClassifier(), grid, scoring= \"accuracy\")\n",
+    "grid_cv.fit(data.get(\"data\"), data.get(\"target\"))\n",
     "# best_parameters = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'metric': 'minkowski', 'n_neighbors': 11}"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_cv.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_parameters = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
    "metadata": {
     "deletable": false,
     "editable": false,
