--- a/S01 - Bootcamp and Binary Classification/SLU19 - k-Nearest Neighbors (kNN)/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU19 - k-Nearest Neighbors (kNN)/Exercise notebook.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -292,13 +292,17 @@
     "    if a.shape != b.shape:\n",
     "        return None\n",
     "\n",
-    "    dist_calc_method = {\n",
-    "        \"euclidean\": euclidean_distance(a, b),\n",
-    "        \"dot\": dot_distance(a, b),\n",
-    "        \"cosine\": cos_distance(a, b)\n",
-    "    }\n",
+    "    distance = None\n",
+    "\n",
+    "    if distance_type == \"euclidean\":\n",
+    "        distance = euclidean_distance(a, b)\n",
+    "\n",
+    "    if distance_type == \"dot\":\n",
+    "        distance = dot_distance(a, b)\n",
+    "\n",
+    "    if distance_type == \"cosine\":\n",
+    "        distance = cos_distance(a, b)\n",
     "    \n",
-    "    distance = dist_calc_method.get(distance_type, None)\n",
     "    # raise NotImplementedError()\n",
     "    \n",
     "    return distance"
@@ -306,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -319,16 +323,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_16150/1373677742.py:9: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return 1-(np.dot(a,b)/(np.sqrt(np.sum((a)**2))*np.sqrt(np.sum((b)**2))))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test Euclidean Distance\n",
     "\n",
@@ -461,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -508,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -581,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -630,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -692,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -734,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -816,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -861,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -923,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -965,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1061,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1088,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1115,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1162,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1197,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1246,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1282,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1339,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1357,12 +1352,12 @@
       "text/plain": [
        "GridSearchCV(estimator=KNeighborsClassifier(),\n",
        "             param_grid=[{'metric': ['minkowski'], 'n_neighbors': [7, 11]},\n",
-       "                         {'metric': [<function cosine at 0x7f30663db790>],\n",
+       "                         {'metric': [<function cosine at 0x7fb79f061c10>],\n",
        "                          'n_neighbors': [9, 11]}],\n",
        "             scoring='accuracy')"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1395,7 @@
        "{'metric': 'minkowski', 'n_neighbors': 11}"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
