--- a/S02 - Data Wrangling/BLU01 - Messy Data/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU01 - Messy Data/Exercise notebook.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -73,7 +73,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "def count_lines(paths_list:List[str]) -> int:\n",
+    "    paths_join: str = \" \".join(paths_list)\n",
+    "    lines_count: List = !cat {paths_join} | wc -l \n",
+    "    return int(lines_count[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -89,14 +104,14 @@
     "# Count the total number of lines of files data/exercises/python_and_open_source.txt and data/exercises/finance.txt\n",
     "# and store the result in variable count_total.  \n",
     "# There is more than one way to do this. Hint: concatenate both files.\n",
-    "# count_total = ...\n",
+    "count_total = count_lines([\"data/exercises/python_and_open_source.txt\", \"data/exercises/finance.txt\"])\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -124,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -144,12 +159,15 @@
     "# first_third = ...\n",
     "# last_third = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "count_total_finance = count_lines([\"data/exercises/finance.txt\"])\n",
+    "first_third = !head -{round(count_total_finance/3)} data/exercises/finance.txt \n",
+    "last_third = !tail -{round(count_total_finance/3)} data/exercises/finance.txt \n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -195,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -207,22 +225,51 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key,Value\n",
+      "Zip,98052-6399\n",
+      "Sector,Technology\n",
+      "Full time employees,221 K\n",
+      "City,Redmond\n",
+      "Phone,425 882 8080\n",
+      "State,WA\n",
+      "Country,United States\n",
+      "Website,https://www.microsoft.com\n",
+      "Max age,1\n",
+      "Address,One Microsoft Way\n",
+      "Fax,425 706 7329\n",
+      "Industry,Software—Infrastructure\n",
+      "Ebitda margins,0.494\n",
+      "Profit margins,0.367\n",
+      "Gross margins,0.684\n",
+      "Operating cashflow,89.035 B\n",
+      "Revenue growth,0.124\n",
+      "Operating margins,0.421\n",
+      "Ebitda,97.983 B\n"
+     ]
+    }
+   ],
    "source": [
     "# Use a shell command to preview the data\n",
     "# ! ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "!head -20 data/exercises/microsoft_info.csv\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "# Use function read_csv to read the data into a DataFrame\n",
     "# df2 = pd.read_csv(...)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "df2 = pd.read_csv(\"data/exercises/microsoft_info.csv\", index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -269,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -280,17 +327,36 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key,Value\n",
+      "Zip,98052-6399\n",
+      "Sector,Technology\n",
+      "Full time employees,221 K\n",
+      "City,Redmond\n",
+      "Phone,425 882 8080\n",
+      "State,WA\n",
+      "Country,United States\n",
+      "Website,https://www.microsoft.com\n",
+      "Max age,1\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file data/exercises/microsoft_info_w_problems.csv with read_csv\n",
     "# df3 = pd.read_csv(...)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "!head data/exercises/microsoft_info_w_problems.csv\n",
+    "# raise NotImplementedError()\n",
+    "df3 = pd.read_csv(\"data/exercises/microsoft_info_w_problems.csv\", index_col=0).replace(\"no-data\", np.nan)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -860,7 +926,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('BLU01')",
    "language": "python",
    "name": "python3"
   },
@@ -874,7 +940,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7ec0a8975166f2fe149be0b455c47a57b681203956f67b0d9ebaf9cbe1d719d1"
+   }
   }
  },
  "nbformat": 4,
