--- a/S02 - Data Wrangling/BLU01 - Messy Data/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU01 - Messy Data/Exercise notebook.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -415,30 +415,179 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>France_GDP</th>\n",
+       "      <th>Germany_GDP</th>\n",
+       "      <th>Italy_GDP</th>\n",
+       "      <th>Netherlands_GDP</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-01</th>\n",
+       "      <td>362.551</td>\n",
+       "      <td>524.635</td>\n",
+       "      <td>304.165</td>\n",
+       "      <td>109.902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-04-01</th>\n",
+       "      <td>367.868</td>\n",
+       "      <td>527.769</td>\n",
+       "      <td>309.196</td>\n",
+       "      <td>111.926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-07-01</th>\n",
+       "      <td>372.492</td>\n",
+       "      <td>529.088</td>\n",
+       "      <td>311.721</td>\n",
+       "      <td>114.094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-10-01</th>\n",
+       "      <td>377.348</td>\n",
+       "      <td>527.676</td>\n",
+       "      <td>318.196</td>\n",
+       "      <td>116.259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01</th>\n",
+       "      <td>380.839</td>\n",
+       "      <td>541.631</td>\n",
+       "      <td>322.663</td>\n",
+       "      <td>119.032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-01</th>\n",
+       "      <td>615.817</td>\n",
+       "      <td>889.747</td>\n",
+       "      <td>440.686</td>\n",
+       "      <td>212.287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-01</th>\n",
+       "      <td>635.563</td>\n",
+       "      <td>909.560</td>\n",
+       "      <td>452.192</td>\n",
+       "      <td>218.382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-01</th>\n",
+       "      <td>640.959</td>\n",
+       "      <td>922.713</td>\n",
+       "      <td>453.054</td>\n",
+       "      <td>221.357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>645.610</td>\n",
+       "      <td>941.113</td>\n",
+       "      <td>460.042</td>\n",
+       "      <td>227.206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-01</th>\n",
+       "      <td>651.090</td>\n",
+       "      <td>953.710</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>90 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            France_GDP  Germany_GDP  Italy_GDP  Netherlands_GDP\n",
+       "date                                                           \n",
+       "2000-01-01     362.551      524.635    304.165          109.902\n",
+       "2000-04-01     367.868      527.769    309.196          111.926\n",
+       "2000-07-01     372.492      529.088    311.721          114.094\n",
+       "2000-10-01     377.348      527.676    318.196          116.259\n",
+       "2001-01-01     380.839      541.631    322.663          119.032\n",
+       "...                ...          ...        ...              ...\n",
+       "2021-04-01     615.817      889.747    440.686          212.287\n",
+       "2021-07-01     635.563      909.560    452.192          218.382\n",
+       "2021-10-01     640.959      922.713    453.054          221.357\n",
+       "2022-01-01     645.610      941.113    460.042          227.206\n",
+       "2022-04-01     651.090      953.710        NaN              NaN\n",
+       "\n",
+       "[90 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read file data/exercises/microsoft_info_w_problems.csv using csv.reader() and add result to\n",
     "# lines = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "with open(\"data/exercises/countries_gdp.csv\") as csv_file:\n",
+    "    csv_reader = csv.reader(csv_file)\n",
+    "    lines = [line for line in csv_reader]\n",
+    "lines\n",
+    "# raise NotImplementedError()\n",
     "# create a dataframe using the line list with only 4 columns (countries)\n",
     "# df4 = pd.DataFrame(...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "df4 = pd.DataFrame(lines[1:], columns=lines[0]).iloc[:, 0:5].replace('', np.nan)\n",
+    "df4['date'] = pd.to_datetime(df4['date'])\n",
+    "df4 = df4.set_index('date').astype(float)\n",
+    "df4\n",
+    "\n",
+    "# raise NotImplementedError()\n",
     "# replace empty values with nan (np.nan)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "# set types per dataframe column, including the date (always use float64 when floats are needed)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "# set a new index to the dataframe\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -487,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -503,12 +652,13 @@
     "# Read file data/exercises/portugal_production_of_electricity_gwh.json with read_json\n",
     "# df5 = read_json(...)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "df5 = pd.read_json(\"data/exercises/portugal_production_of_electricity_gwh.json\", orient='table')\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -557,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -573,16 +723,18 @@
     "# Read file data/exercises/portugal_gas_emissions_per_year.xlsx with read_excel\n",
     "# df6 = read_excel(...)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "df6 = pd.read_excel(\"data/exercises/portugal_gas_emissions_per_year.xlsx\", sheet_name=\"metadata\", header=22, index_col=0, usecols=\"A:D\", nrows=11)\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "#distinct_scales = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "distinct_scales = df6[\"Scale\"].nunique()\n",
+    "# raise NotImplementedError()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "deletable": false,
     "editable": false,
