--- a/S02 - Data Wrangling/BLU01 - Messy Data/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU01 - Messy Data/Exercise notebook.ipynb
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -798,21 +798,25 @@
     "# Find the encoding of file data/exercises/cities.csv\n",
     "# encoding = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "encoding = chardet.detect(open(\"data/exercises/cities.csv\", 'rb').read()).get(\"encoding\")\n",
+    "# raise NotImplementedError()\n",
     "# Read the file into a DataFrame\n",
     "# df7 = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "df7 = pd.read_csv(\"data/exercises/cities.csv\", encoding=encoding)\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "# Find the name of the city with distance = 7503\n",
     "# city_found = .... (assign a string)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "city_found = df7.loc[df7[\"distance\"]==7503, \"City\"].values[0]\n",
+    "\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "deletable": false,
     "editable": false,
