--- a/S02 - Data Wrangling/BLU01 - Messy Data/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU01 - Messy Data/Exercise notebook.ipynb
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -878,24 +878,37 @@
     "# in lines_in_file (as an integer), using \n",
     "# lines_in_file = ...\n",
     "# Notice that the header is not a line..\n",
-    "\n",
+    "lines_in_file = count_lines([\"data/exercises/world_percentage_of_literacy.tsv\"])-1\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "# make parameter rows_to_skip equal to the lines you want to skip loading \n",
     "# don't forget: 10 rows should be fetched\n",
     "# rows_to_skip = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "sample_number = 10\n",
+    "rows_to_skip = lines_in_file - sample_number\n",
+    "# raise NotImplementedError()\n",
     "# Create a df8 dataframe with the sampled values\n",
     "# don't forget: you want to keep the header plus 10 rows in the new dataframe.\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "random.seed(42) # this is to get always the same sample. can be removed if we want the sample to change\n",
+    "rows_to_skip = random.sample(\n",
+    "    range(1, lines_in_file), # this is a range from the first row after the header, to the last row on the file\n",
+    "    rows_to_skip # this is the number of rows we want to random sample here, and that we will be skipped on pd.read_csv with argument skiprows\n",
+    ")\n",
+    "\n",
+    "df8 = pd.read_csv( \n",
+    "    \"data/exercises/world_percentage_of_literacy.tsv\",\n",
+    "    skiprows=rows_to_skip,\n",
+    "    sep=\"\\t\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -961,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -977,17 +990,30 @@
     "# Read file data/exercises/world_percentage_of_literacy.tsv\n",
     "# the chunks should be appended in a list called chunk_arr\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
-    "\n",
+    "chunk_iter = pd.read_csv(\n",
+    "    \"data/exercises/world_percentage_of_literacy.tsv\",\n",
+    "    sep=\"\\t\",\n",
+    "    chunksize=20, \n",
+    "    usecols=[0, 4],\n",
+    "    na_values = [\"not reported by UNESCO 2015\", \"\"]\n",
+    ")\n",
+    "# raise NotImplementedError()\n",
+    "chunk_arr = []\n",
+    "for data_chunk in chunk_iter:\n",
+    "    data_chunk = data_chunk.dropna(axis=0)\n",
+    "    data_chunk[\"Gender difference\"] = data_chunk[\"Gender difference\"].str.replace(\"%\", \"\").astype(float)\n",
+    "    chunk_arr.append(data_chunk)\n",
     "# df9 should be the final dataframe with concatenated chunks\n",
     "# Resulting average should go on lit_avg variable\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "df9 = pd.concat(chunk_arr)\n",
+    "lit_avg = df9[\"Gender difference\"].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {
     "deletable": false,
     "editable": false,
