--- a/S02 - Data Wrangling/BLU01 - Messy Data/Exercise notebook.ipynb
+++ b/S02 - Data Wrangling/BLU01 - Messy Data/Exercise notebook.ipynb
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1080,12 +1080,30 @@
     "# the final average should be in the variable final_avg\n",
     "# You should increment 2 variables in each chunk and use them at the end to calculate final_avg. call them lit_a, lit_b\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n"
+    "chunk_iter = pd.read_csv(\n",
+    "    \"data/exercises/world_percentage_of_literacy.tsv\",\n",
+    "    sep=\"\\t\",\n",
+    "    chunksize=20, \n",
+    "    usecols=[0, 1],\n",
+    "    na_values = [\"not reported by UNESCO 2015\", \"\"]\n",
+    ")\n",
+    "# raise NotImplementedError()\n",
+    "\n",
+    "lit_a = 0\n",
+    "lit_b = 0\n",
+    "for data_chunk in chunk_iter:\n",
+    "    data_chunk = data_chunk.dropna(axis=0)\n",
+    "    data_chunk[\"Literacy rate (all)\"] = data_chunk[\"Literacy rate (all)\"].str.extract(r'([0-9]+\\.?[0-9]*)').astype(float)\n",
+    "    lit_a += data_chunk[\"Literacy rate (all)\"].sum()\n",
+    "    lit_b +=data_chunk[\"Literacy rate (all)\"].count()\n",
+    "\n",
+    "# raise NotImplementedError()\n",
+    "final_avg = lit_a/lit_b\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1104,6 +1122,13 @@
     "assert lit_b==151 or lit_a==151, \"lit_a or lit_b is wrong\"\n",
     "assert int(lit_b) == 12569 or int(lit_a)==12569, \"lit_a or lit_b is wrong\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
